--- a/index.html
+++ b/index.html
@@ -233,6 +233,32 @@
 
           <div class="table" id="ordersTable"></div>
         </div>
+
+        <div class="card danger">
+          <div class="card-header">
+            <div>
+              <h2>System Reset</h2>
+              <p>Irreversibly wipes all tenant data and staff accounts. Owner accounts and tenant records remain.</p>
+            </div>
+          </div>
+
+          <div class="form-grid">
+            <label>
+              Confirmation phrase
+              <input type="text" id="wipeAllConfirm" placeholder="ERASE ALL" />
+            </label>
+            <label>
+              Current password
+              <input type="password" id="wipeAllPassword" placeholder="Password" autocomplete="current-password" />
+            </label>
+            <div class="actions">
+              <button type="button" class="btn danger" id="wipeAllBtn">Wipe all tenant data</button>
+              <span class="hint" id="wipeAllHint"></span>
+            </div>
+          </div>
+
+          <p class="hint">Type <span class="mono">ERASE ALL</span> to confirm. This cannot be undone.</p>
+        </div>
         </section>
 
       </div>
