owner portal: show tenant admin credentials

--- a/index.html
+++ b/index.html
@@ -184,18 +184,19 @@
                 <input type="number" id="tenantSeedPool" placeholder="0" min="0" step="1" />
               </label>
               <label>
-                Admin username (optional)
+                Admin username
                 <input type="text" id="tenantAdminUsername" placeholder="auto-generated" />
               </label>
               <label>
-                Admin email (optional)
+                Admin email
                 <input type="email" id="tenantAdminEmail" placeholder="admin@tenant.com" />
               </label>
               <label>
-                Admin password (optional)
+                Admin password
                 <input type="text" id="tenantAdminPassword" placeholder="auto-generated" />
               </label>
             </div>
+            <p class="form-note">Leave admin fields blank to auto-generate credentials.</p>
 
             <div class="actions">
               <button type="submit" class="btn primary">Create tenant</button>
