--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                 Admin password
                 <input type="text" id="tenantAdminPassword" placeholder="auto-generated" />
               </label>
+              <div style="grid-column: 1 / -1;">
+                <div class="small" style="margin-bottom: 6px;">Tenant configuration</div>
+                <div class="toggles" id="tenantCreateToggles"></div>
+                <p class="hint">Overrides system defaults for this tenant.</p>
+              </div>
             </div>
             <p class="form-note">Leave admin fields blank to auto-generate credentials.</p>
 
